--- a/starter/package.json
+++ b/starter/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-server": "^5.2.0",
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
+    "materialize-css": "^0.100.2",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
